CS354/ia2/Grammar
stmt  : assn ';'
assn  : id '=' expr
expr  : unary expr
      | term addop expr
      | term
term  : fact mulop term
      | fact
fact  : id 
      | num
      | '(' expr ')'
addop : '+'
      | '-'
mulop : '*'
      | '/'
unary : '-'
